--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,13 @@
 /* CSS declarations go here*/
+
+p.block {
+  font-size : 20px;
+  display: inline-block;
+  width: 200px;
+  text-align: center;
+  vertical-align: middle;
+}
+
 .adButt {
   -webkit-border-radius: 60;
   -moz-border-radius: 60;
@@ -10,13 +19,13 @@
   background: #bababa;
 }
 
-.cell {
+/*.cell {
   font-size: 20px;
   height: 25px;
   width: 200px;
   text-align: center;
   vertical-align: middle;
-}
+}*/
 
 .lock {
   -webkit-border-radius: 60;
