--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,19 @@
 /* CSS declarations go here*/
+
+.secretButt {
+  height: 100px;
+  width: 1000px;
+  background-color: white;
+}
+
+.adSpan {
+  font-size: 36px;
+}
+
+.tableButt {
+  margin: 0px auto;
+}
+
 .wait {
   font-size: 100px;
 }
@@ -36,7 +51,7 @@ p.h2 {
 p.block {
   font-size : 48px;
   display: inline-block;
-  width: 325px;
+  width: 300px;
   text-align: center;
   vertical-align: middle;
 }
@@ -182,7 +197,11 @@ body {
 
 }
 
-
+.centerDiv {
+  align: center;
+  min-width: 1000px;
+  /*margin: 0px auto;*/
+}
 
 .container {
 
@@ -191,13 +210,12 @@ body {
 
   margin: 0 auto;
 
-  min-height: 1600px;
+  min-height: 1400px;
   max-height: 1600px;
 
   background: white;
 
 }
-
 
 
 header {
@@ -216,15 +234,6 @@ header {
 }
 
 
-
-#login-buttons {
-
-  display: block;
-
-}
-
-
-
 h1 {
 
   font-size: 1.5em;
@@ -240,114 +249,31 @@ h1 {
 }
 
 
-
 form {
-
   margin-top: 10px;
-
   margin-bottom: -10px;
-
   position: relative;
-
 }
-
-
-
-.new-task input {
-
-  box-sizing: border-box;
-
-  padding: 10px 0;
-
-  background: transparent;
-
-  border: none;
-
-  width: 100%;
-
-  padding-right: 80px;
-
-  font-size: 1em;
-
-}
-
-
-
-.new-task input:focus{
-
-  outline: 0;
-
-}
-
-
-
-ul {
-
-  margin: 0;
-
-  padding: 0;
-
-  background: white;
-
-}
-
-
-
-.delete {
-
-  float: right;
-
-  font-weight: bold;
-
-  background: none;
-
-  font-size: 1em;
-
-  border: none;
-
-  position: relative;
-
-}
-
 
 
 li {
-
   position: relative;
-
   list-style: none;
-
   padding: 15px;
-
   border-bottom: #eee solid 1px;
-
 }
-
-
 
 li .text {
-
   margin-left: 10px;
-
 }
-
-
 
 li.checked {
-
   color: #888;
-
 }
-
-
 
 li.checked .text {
-
   text-decoration: line-through;
-
 }
-
-
 
 li.private {
 
@@ -356,23 +282,6 @@ li.private {
   border-color: #ddd;
 
 }
-
-
-
-header .hide-completed {
-
-  float: right;
-
-}
-
-
-
-.toggle-private {
-
-  margin-left: 5px;
-
-}
-
 
 
 @media (max-width: 600px) {
