--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,13 @@
 /* CSS declarations go here*/
 
+p.place {
+  font-size : 48px;
+  display: inline-block;
+  width: 50px;
+  text-align: center;
+  vertical-align: middle;
+}
+
 .leaderDiv {
   min-height: 400px;
 }
@@ -24,7 +32,7 @@
 
 #confirm {
   visibility: hidden;
-  font-size: 36px;
+  font-size: 48px;
   color: #00cc00;
 }
 
@@ -36,11 +44,29 @@
 .regIn {
   padding: 20px;
   font-size: 36px;
+  margin: 20px;
 }
 
 .regButt {
-  padding: 20px;
-  font-size: 48px;
+  /*padding: 20px;
+  font-size: 48px;*/
+  margin: 40px;
+
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 64px;
+  padding: 10px 25px 10px 20px;
+  text-decoration: none;
+
 }
 
 p.h1 {
@@ -55,7 +81,7 @@ p.h2 {
 p.block {
   font-size : 48px;
   display: inline-block;
-  width: 300px;
+  width: 250px;
   text-align: center;
   vertical-align: middle;
 }
@@ -98,7 +124,7 @@ p.block {
   font-family: Arial;
   color: #ffffff;
   font-size: 64px;
-  background: #34d96e;
+  background: #122d72;
   height: 180px;
   width: 400px;
 }
@@ -110,7 +136,7 @@ p.block {
   font-family: Arial;
   color: #ffffff;
   font-size: 64px;
-  background: #3486d9;
+  background: #16abde;
   height: 180px;
   width: 400px;
 }
