--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,9 @@
 /* CSS declarations go here*/
 
+th.thButt {
+  font-size: 72px;
+}
+
 p.place {
   font-size : 48px;
   display: inline-block;
@@ -39,6 +43,21 @@ p.place {
 .avatarButt {
   font-size: 48px;
   padding: 20px;
+
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  /*padding: 10px 25px 10px 20px;*/
+
+
 }
 
 .regIn {
@@ -65,7 +84,6 @@ p.place {
   color: #ffffff;
   font-size: 64px;
   padding: 10px 25px 10px 20px;
-  text-decoration: none;
 
 }
 
@@ -96,14 +114,6 @@ p.block {
   padding: 32px;
   background: #bababa;
 }
-
-/*.cell {
-  font-size: 20px;
-  height: 25px;
-  width: 200px;
-  text-align: center;
-  vertical-align: middle;
-}*/
 
 .lock {
   -webkit-border-radius: 60;
@@ -198,7 +208,8 @@ body {
 
   font-family: sans-serif;
 
-  background-color: #315481;
+  /*background-color: #315481;*/
+  background-color: #ffffff;
 
   /*background-image: linear-gradient(to bottom, #315481, #918e82 100%);*/
 
@@ -283,61 +294,4 @@ form {
   margin-top: 10px;
   margin-bottom: -10px;
   position: relative;
-}
-
-
-li {
-  position: relative;
-  list-style: none;
-  padding: 15px;
-  border-bottom: #eee solid 1px;
-}
-
-li .text {
-  margin-left: 10px;
-}
-
-li.checked {
-  color: #888;
-}
-
-li.checked .text {
-  text-decoration: line-through;
-}
-
-li.private {
-
-  background: #eee;
-
-  border-color: #ddd;
-
-}
-
-
-@media (max-width: 600px) {
-
-  li {
-
-    padding: 12px 15px;
-
-  }
-
-
-
-  .search {
-
-    width: 150px;
-
-    clear: both;
-
-  }
-
-
-
-  .new-task input {
-
-    padding-bottom: 5px;
-
-  }
-
 }
